<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_AxisStatus_v0_01" Id="{599661fb-9246-4a68-9ba7-2ef6c3f03f60}">
    <Declaration><![CDATA[TYPE DUT_AxisStatus_v0_01 :
STRUCT
	bEnable: BOOL;
	bReset: BOOL;
	bExecute: BOOL;
	nCommand: UINT;
	nCmdData: UINT;
	fVelocity: LREAL;
	fPosition: LREAL;
	fAcceleration: LREAL;
	fDeceleration: LREAL;
	bJogFwd: BOOL;
	bJogBwd: BOOL;
	bLimitFwd: BOOL;
	bLimitBwd: BOOL;
	fOverride: LREAL := 100;
	bHomeSensor: BOOL;
	bEnabled: BOOL;
	bError: BOOL;
	nErrorId: UDINT;
	fActVelocity: LREAL;
	fActPosition: LREAL;
	fActDiff: LREAL;
	bHomed:BOOL;
	bBusy:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>